--- a/ui/packages/consul-ui/app/templates/dc/services/show/topology.hbs
+++ b/ui/packages/consul-ui/app/templates/dc/services/show/topology.hbs
@@ -1,4 +1,4 @@
-<div id="tags" class="tab-section">
+<div id="topology" class="tab-section">
   <div role="tabpanel">
   {{#if topology.FilteredByACLs}}
     <TopologyMetrics::Notice::LimitedAccess />
