--- a/ui/packages/consul-ui/app/components/tab-nav/index.scss
+++ b/ui/packages/consul-ui/app/components/tab-nav/index.scss
@@ -1,5 +1,16 @@
 @import './skin';
 @import './layout';
+.tab-nav {
+  @extend %tab-nav;
+}
+%tab-nav.animatable {
+  @extend %with-animated-tab-selection;
+}
+.tab-section {
+  @extend %tab-section;
+  /* this keeps in-tab-section toolbars flush to the top, see Node Detail > Services */
+  margin-top: 0 !important;
+}
 %with-animated-tab-selection ul::after,
 %tab-button-selected {
   @extend %frame-brand-300;
