Use Action component

--- a/ui/packages/consul-ui/app/components/confirmation-alert/index.hbs
+++ b/ui/packages/consul-ui/app/components/confirmation-alert/index.hbs
@@ -21,9 +21,9 @@
       </YieldSlot>
     </Actions.Action>
     <Actions.Action>
-      <ConfirmationAlert::Action @for={{@name}}>
+      <Action @for={{@name}}>
         Cancel
-      </ConfirmationAlert::Action>
+      </Action>
     </Actions.Action>
   </:actions>
 </InformedAction>
